deleted div, deleted button, edited our-teams.scss file

--- a/students/dunaieva_alona/13_preprocessor/src/index.html
+++ b/students/dunaieva_alona/13_preprocessor/src/index.html
@@ -14,53 +14,45 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="titles">
-                            <h4>The geniuses behind our work</h4>
-                            <h1>Our team</h1>
-                        </div>
+                        <p class="sub-title">The geniuses behind our work</p>
+                        <h1>Our team</h1>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 block">
                         <div class="wrapper">
                             <img class="wrapper__image" src="images/photo.jpg" alt="man">
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="profile">
-                            <div class="profile__title">
-                                <h2>Sahariar Kabir</h2>
-                            </div>
-                            <h3>Frontend Developer</h3>
-                            <ul class="profile_icon icon">
-                                <li class="icon__item">
-                                    <a href="#">
-                                        <img src="images/facebook.svg" alt="facebook">
-                                    </a>
-                                </li>
-                                <li class="icon__item">
-                                    <a href="#">
-                                        <img src="images/twitter.svg" alt="twitter">
-                                    </a>
-                                </li>
-                                <li class="icon__item">
-                                    <a href="#">
-                                        <img src="images/google.svg" alt="google">
-                                    </a>
-                                </li>
-                                <li class="icon__item">
-                                    <a href="#">
-                                        <img src="images/linkedin.svg" alt="linkedin">
-                                    </a>
-                                </li>
-                            </ul>
-                            <div class="profile__parg-wrapper">
-                                <p class="profile__parg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus dui sit amet ligula efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut euismod lacus placerat. Praesent rutrum eget massa
-                                    a convallis. Nam vitae augue malesuada, accumsan mauris ut, consectetur.</p>
-                            </div>
-                            <button class="profile__btn">
-                                        <span>view profile</span>
-                                </button>
+                    <div class="col-6 profile">
+                        <h2 class="profile__title">Sahariar Kabir</h2>
+                        <h3 class="profile__title-sub">Frontend Developer</h3>
+                        <ul class="profile_icon icon">
+                            <li class="icon__item">
+                                <a href="#">
+                                    <img src="images/facebook.svg" alt="facebook">
+                                </a>
+                            </li>
+                            <li class="icon__item">
+                                <a href="#">
+                                    <img src="images/twitter.svg" alt="twitter">
+                                </a>
+                            </li>
+                            <li class="icon__item">
+                                <a href="#">
+                                    <img src="images/google.svg" alt="google">
+                                </a>
+                            </li>
+                            <li class="icon__item">
+                                <a href="#">
+                                    <img src="images/linkedin.svg" alt="linkedin">
+                                </a>
+                            </li>
+                        </ul>
+                        <p class="profile__parg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus dui sit amet ligula efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut euismod lacus placerat. Praesent rutrum eget massa
+                            a convallis. Nam vitae augue malesuada, accumsan mauris ut, consectetur.</p>
+                        <div class="profile__btn btn">
+                            <a class="btn__link" href="#">view profile</a>
                         </div>
                     </div>
                 </div>
