--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
@@ -37,8 +37,8 @@
     </header>
 
     <main>
-        <div class="container">
-            <section class="design">
+        <section class="design">
+            <div class="container design-container">
                 <div class="design_item1">
                     <h1 class="design_header">The Design Thinking superpowers</h1>
                     <p class="design_item_content">Tools, tutorials, design and innovation experts, all in one place!
@@ -50,8 +50,9 @@
                 <div class="design_item2">
                     <img src="./images/des_thinking.svg" alt="design thinking">
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
+
 
         <section class="we-design">
             <div class="container">
