--- a/students/umienchuk_oksana/10_box_model/productly/index.html
+++ b/students/umienchuk_oksana/10_box_model/productly/index.html
@@ -64,9 +64,8 @@
                 </div>
                 <div class="footer__form">
                     <h4 class="footer__title">Knowing you're always on the best energy deal.</h4>
-                    <form>
-                        <input type="tel" id="phone" name="phone" value=""
-                            placeholder="Enter your phone Number"><br><br>
+                    <form action="#" method="post">
+                        <input type="tel" id="phone" name="phone" value="" placeholder="Enter your phone Number"><br>
                         <button class="btn-third__item" type="submit"><span>Sign up Now</span></button>
                     </form>
                 </div>
