made html structure

--- a/students/umienchuk_oksana/exams_first/src/index.html
+++ b/students/umienchuk_oksana/exams_first/src/index.html
@@ -9,7 +9,39 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
 
+                    <h1 class="main-title">Bhromaon</h1>
+                    <p class="title-sub-text">Safe Travel Anywhere</p>
+                    <form action="" method="get" class="search-form">
+                        <div class="search-form__wrapper">
+                            <input class="search-form__input input-form" type="text" name="search"
+                                placeholder=" Search Your Travel Destination">
+                            <button class="search-form__button btn btn-primary">Search</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <nav class="menu">
+                <img class="menu__logo" src="./images/bhromaon-small-logo.svg" alt="Bhromaon">
+                <ul class="menu__items">
+                    <li class="menu__item">Who We Are</li>
+                    <li class="menu__item">What We Do</li>
+                    <li class="menu__item">Travel With Us</li>
+                    <li class="menu__item">Contact Us</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        <div class="container">
+            <img src="./images/whybackground.svg" alt="">
+
+        </div>
+    </main>
 </body>
 
 </html>
