add code javascript

--- a/students/umienchuk_oksana/23_js/index.html
+++ b/students/umienchuk_oksana/23_js/index.html
@@ -5,23 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js</title>
-    <script>
-
-    </script>
+    <script src="./js/script.js"></script>
 </head>
 
 <body>
     <header>
         <h1>Ефективні рішення для вашого бізнесу</h1>
+        <!-- <script>
+        const nameUser = 'Oksana';
+        const surNameUser = 'Umienchuk';
+        const fullNameUser1 = 'My name is' + ' ' + nameUser + ' ' + surNameUser;
+        console.log(fullNameUser1);
+    </script> -->
     </header>
-    <a href="javascript: alert('ok')">ok</a>
 
-    <main></main>
-
-    <script>
-
-    </script>
-    <script src="./js/script.js"></script>
+    <main>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                    </div>
+                    <div class="col-3">
+                        <h2>ПУНКТУАЛЬНІСТЬ</h2>
+                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    </div>
+                    <div class="col-3">
+                        <h2>ПЛАНУВАННЯ</h2>
+                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </div>
+                    <div class="col-3">
+                        <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- <script>
+        const nameUser = 'Oksana';
+        const surNameUser = 'Umienchuk';
+        const fullNameUser1 = 'My name is' + ' ' + nameUser + ' ' + surNameUser;
+        console.log(fullNameUser1);
+    </script> -->
 </body>
 
 </html>
