add change for code javascript

--- a/students/umienchuk_oksana/23_js/index.html
+++ b/students/umienchuk_oksana/23_js/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>js</title>
-    <script src="./js/script.js"></script>
+    <!-- <script src="./js/script.js"></script> -->
 </head>
 
 <body>
@@ -43,12 +43,7 @@
             </div>
         </section>
     </main>
-    <!-- <script>
-        const nameUser = 'Oksana';
-        const surNameUser = 'Umienchuk';
-        const fullNameUser1 = 'My name is' + ' ' + nameUser + ' ' + surNameUser;
-        console.log(fullNameUser1);
-    </script> -->
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
