08_html check to work

--- a/students/yeremenko_denys/08_html/index.html
+++ b/students/yeremenko_denys/08_html/index.html
@@ -104,17 +104,18 @@ text-align: center;">
         <section style="background-color: #F6F6F6;" id="portfolio">
             <h2>Portfolio</h2>
             <a href="#"><img src="images/portfolio.jpg" alt="Online fashion store"></a>
-            <a href="#">
-                <p style="text-decoration: underline; color: #070707;">Online fashion store -<br> Homepage</p>
+            <a href="#" style="text-decoration: underline; color: #070707; display: block;">
+                Online fashion store -<br> Homepage
             </a>
+
             <a href="#"><img src="images/reebok.jpg" alt="Reebok Store - Concept"></a>
-            <a href="#">
-                <p style="text-decoration: underline; color: #070707;">Reebok Store - Concept</p>
+            <a href="#" style="text-decoration: underline; color: #070707; display: block;">
+                Reebok Store - Concept
             </a>
             <a href=" #"><img src="images/braun.jpg" alt="Braun Landing Page - Concept">
             </a>
-            <a href="#">
-                <p style="text-decoration: underline; color: #070707;">Braun Landing Page - Concept</p>
+            <a href="#" style="text-decoration: underline; color: #070707; display: block;">
+                Braun Landing Page - Concept
             </a>
         </section>
     </main>
@@ -122,14 +123,16 @@ text-align: center;">
         <section id="contacts">
             <h2>Contacts</h2>
             <p>Want to know more or just chat? <br />You are welcome!</p>
-            <button>Send message</button>
+            <button
+                style="font-size: 18px; color: white; font-weight: 700; letter-spacing: 1.80px; background-color: #070707; border-radius: 22px;">Send
+                message</button>
             <ul>
                 <li><a target="_blank" href="#"><img src="images/linkedin.svg" alt="LinkedIn"></a></li>
                 <li><a target="_blank" href="#"><img src="images/instagram.svg" alt="Instagram"></a></li>
                 <li><a target="_blank" href="#"><img src="images/behance.svg" alt="Behance"></a></li>
                 <li><a target="_blank" href="#"><img src="images/dribbble.svg" alt="Dribble"></a></li>
             </ul>
-            <p>Like me on<br />LinkedIn, Instagram, Behance,<br> Dribble</p>
+            <p style="color: #828282; font-size: 14px;">Like me on<br />LinkedIn, Instagram, Behance,<br> Dribble</p>
         </section>
     </footer>
 </body>
