--- a/students/kukuruza_maxim/02_html/index.html
+++ b/students/kukuruza_maxim/02_html/index.html
@@ -51,14 +51,12 @@
         </div>
         <div id="contacts" class="description">
             <div class="info">
-                <p>
-                    contact me via
+                <p>contact me via</p>
                 <ul>
                     <li>email: makskukuruza442@gmail.com</li>
                     <li>telegram: @linkOfMyTg</li>
                     <li>phone:+380123456789</li>
                 </ul>
-                </p>
             </div>
         </div>
     </main>
