--- a/students/kukuruza_maxim/11_flex/index.html
+++ b/students/kukuruza_maxim/11_flex/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
     <title>Productly</title>
 </head>
 
