added link to pages

--- a/students/kukuruza_maxim/07_html/index.html
+++ b/students/kukuruza_maxim/07_html/index.html
@@ -45,47 +45,47 @@
                 <p>I work in such programs as</p>
                 <div class="programs">
                     <div class="container">
-                        <img style="width: 90px;" src="./img/PS.svg" alt="Photoshop">
+                        <img style="width: 90px;" src="./img/ps.svg" alt="Photoshop">
                         <p>Adobe <br> Photoshop</p>
                         <div class="stars">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star-G.png" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star-g.png" alt="star">
                         </div>
                     </div>
                     <div class="container">
-                        <img style="width: 90px;" src="./img/AI.svg" alt="Photoshop">
+                        <img style="width: 90px;" src="./img/ai.svg" alt="Photoshop">
                         <p>Adobe <br> Illustrator</p>
                         <div class="stars">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star-G.png" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star-g.png" alt="star">
                         </div>
                     </div>
                     <div class="container">
-                        <img style="width: 90px;" src="./img/AE.svg" alt="Photoshop">
+                        <img style="width: 90px;" src="./img/ae.svg" alt="Photoshop">
                         <p>Adobe <br> After Effects</p>
                         <div class="stars">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star-G.png" alt="star">
-                            <img src="./img/Star-G.png" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star-g.png" alt="star">
+                            <img src="./img/star-g.png" alt="star">
                         </div>
                     </div>
                     <div class="container">
                         <img style="width: 58px;" src="./img/Figma.svg" alt="Photoshop">
                         <p>Figma</p>
                         <div class="stars">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star.svg" alt="star">
-                            <img src="./img/Star-G.png" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star.svg" alt="star">
+                            <img src="./img/star-g.png" alt="star">
                         </div>
                     </div>
                 </div>
@@ -131,9 +131,9 @@
             <div class="footer-links">
                 <button type="button" href="#">Send message</button>
                 <div class="social">
-                    <a href="#"><img src="./img/linkedIn.svg" alt="LinkedIn"></a>
+                    <a href="#"><img src="./img/linkedin.svg" alt="LinkedIn"></a>
                     <a href="#"><img src="./img/inst.svg" alt="Instagram"></a>
-                    <a href="#"><img src="./img/Dribble.svg" alt="Dribble"></a>
+                    <a href="#"><img src="./img/dribble.svg" alt="Dribble"></a>
                     <a href="#"><img src="./img/behance.svg" alt="Behance"></a>
                 </div>
                 <p style=" color: #828282;">Like me on <br>
