--- a/students/kukuruza_maxim/07_html/index.html
+++ b/students/kukuruza_maxim/07_html/index.html
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="container">
-                        <img style="width: 58px;" src="./img/Figma.svg" alt="Photoshop">
+                        <img style="width: 58px;" src="./img/figma.svg" alt="Photoshop">
                         <p>Figma</p>
                         <div class="stars">
                             <img src="./img/star.svg" alt="star">
