added content to header, fixed styles

--- a/students/kukuruza_maxim/08_css/index.html
+++ b/students/kukuruza_maxim/08_css/index.html
@@ -11,15 +11,17 @@
 
 <body>
     <header>
-        <nav>
-            <ul class="menu clearfix">
-                <li class="menu__item"><a class="menu__link" href="#top">Home</a></li>
-                <li class="menu__item"><a class="menu__link" href="#about">About me</a></li>
-                <li class="menu__item"><a class="menu__link" href="#skills">Skills</a></li>
-                <li class="menu__item"><a class="menu__link" href="#portfolio">Portfolio</a></li>
-                <li class="menu__item"><a class="menu__link" href="#contacts">Contacts</a></li>
-            </ul>
-        </nav>
+        <div class="content">
+            <nav>
+                <ul class="menu clearfix">
+                    <li class="menu__item"><a class="menu__link" href="#top">Home</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#about">About me</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#skills">Skills</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#portfolio">Portfolio</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#contacts">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="hero">
