--- a/students/kukuruza_maxim/10_css/index.html
+++ b/students/kukuruza_maxim/10_css/index.html
@@ -7,6 +7,12 @@
     <title>Productly</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -30,8 +36,8 @@
                 </li>
             </ul>
             <div class="auth nav__item">
-                <button class="auth__item sign__in">Sign In</button>
-                <button class="auth__item sign__up">Sign Up</button>
+                <a href="#" class="auth__item sign__in">Sign In</a>
+                <a href="#" class="auth__item sign__up">Sign Up</a>
             </div>
         </nav>
     </header>
@@ -45,7 +51,7 @@
                         way to imagine
                         your
                         next user experience.</p>
-                    <button class=" sign__up get">Get started</button>
+                    <a href="#" class=" sign__up get">Get started</a>
                 </div>
                 <div class="hero__item">
                     <img src="./img/oval.svg" alt="oval">
