--- a/students/hridina_anastasiia/Exam_project_1/src/index.html
+++ b/students/hridina_anastasiia/Exam_project_1/src/index.html
@@ -9,15 +9,15 @@
 </head>
 
 <body class="page">
-    @@include('./_header.html');
+    @@include('./_header.html')
     <main class="main">
-        @@include('./_hero-block.html');
-        @@include('./_travel-block.html');
-        @@include('./_spain-block.html');
-        @@include('./_review-block.html');
+        @@include('./_hero-block.html')
+        @@include('./_travel-block.html')
+        @@include('./_spain-block.html')
+        @@include('./_review-block.html')
     </main>
     <footer class="footer">
-        @@include('./_footer.html');
+        @@include('./_footer.html')
     </footer>
 </body>
 
