add block content and btn.css

--- a/students/umienchuk_oksana/exams_first/src/content/_content.html
+++ b/students/umienchuk_oksana/exams_first/src/content/_content.html
@@ -1,9 +1,9 @@
-<section class="content">
+<section class="content content-first">
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <div class="content-block content__right">
-                    <span class="content__sub-text">Spain</span>
+                <div class="content-block content">
+                    <p class="content__sub-text">Spain</p>
                     <h4 class="content__title">Grand Spain Madrid</h4>
                     <p class="content__text">But I must explain to you how all this mistaken idea of account to
                         denouncing pleasure and
@@ -15,12 +15,13 @@
         </div>
     </div>
 </section>
-<section class="content">
+<section class="content content-second">
     <div class="container">
         <div class="row">
+            <!-- <div class="col-6"></div> -->
             <div class="col-6">
-                <div class="content content__left">
-                    <span class="content__sub-text">Spain</span>
+                <div class="content-block content__right">
+                    <p class="content__sub-text">Spain</p>
                     <h4 class="content__title">Grand Spain Madrid</h4>
                     <p class="content__text">But I must explain to you how all this mistaken idea of account to
                         denouncing pleasure and
