what-say structure redone

--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_what-say.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_what-say.html
@@ -6,23 +6,23 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-4 gtr">
+                <img class="what-say__img" src="images/man-tourist.png" alt="">
+            </div>
+            <div class="col-8">
                 <div class="what-say__wrapper what-say-item">
-                    <img class="what-say__img" src="images/man-tourist.png" alt="">
-                    <div class="what-say-item__wrapper">
-                        <h4 class="what-say-item__title">Sam Sumon</h4>
-                        <p class="what-say-item__description">
-                            <svg class="what-say-item__img">
-                                <use xlink:href="images/sprite.svg#quote-left"></use>
-                            </svg>
-                            But I must explain to you how all this mistaken
-                            idea of account to denouncinpleasure and praising pain But I must
-                            explain to you how all this mistaken idea of account to nai denouncing pleasure and
-                            praising pain was account born and I account will give you a complete account of the
-                            system was account born and I account will give you a nai the complete
-                            account of the system
-                        </p>
-                    </div>
+                    <h4 class="what-say-item__title">Sam Sumon</h4>
+                    <p class="what-say-item__description">
+                        <svg class="what-say-item__img">
+                            <use xlink:href="images/sprite.svg#quote-left"></use>
+                        </svg>
+                        But I must explain to you how all this mistaken
+                        idea of account to denouncinpleasure and praising pain But I must
+                        explain to you how all this mistaken idea of account to nai denouncing pleasure and
+                        praising pain was account born and I account will give you a complete account of the
+                        system was account born and I account will give you a nai the complete
+                        account of the system
+                    </p>
                 </div>
             </div>
         </div>
