--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_nav.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_nav.html
@@ -1,12 +1,12 @@
 <nav class="nav">
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-6 col-md-4">
                 <div class="logo-wrapper">
                     <p class="logo">Bhromaon</p>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-6 col-md-8">
                 <div class="menu-wrapper">
                     <ul class="menu-wrapper__item menu">
                         <li class="menu__item">
