--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_why-choose-us.html
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/_why-choose-us.html
@@ -21,8 +21,12 @@
             </div>
             <div class="col-6">
                 <div class="why-choose-us__images-wrapper">
-                    <img class="why-choose-us__img-top" src="images/house-on-river.png" alt="house-on-river">
-                    <img class="why-choose-us__img-bottom" src="images/header-background.png" alt="mountains">
+                    <div class="why-choose-us__image-container">
+                        <img class="why-choose-us__img-top" src="images/house-on-river.png" alt="house-on-river">
+                    </div>
+                    <div class="why-choose-us__image-container">
+                        <img class="why-choose-us__img-bottom" src="images/header-background.png" alt="mountains">
+                    </div>
                 </div>
             </div>
         </div>
