--- a/students/umienchuk_oksana/exams_first/src/block-why/_block-why.html
+++ b/students/umienchuk_oksana/exams_first/src/block-why/_block-why.html
@@ -1,21 +1,23 @@
 <section class="block-why">
     <div class="container">
-        <div class="row">
+        <div class="row flex">
             <div class="col-6">
                 <h2 class="block-why__title">Why Choose Us</h2>
                 <p class="block-why__text">Tion and dislike men who are so beguiled and demoralized by
                     desire by the charms of pleasure
                     of
                     the moment, so blinded by desire, that they cannot foresee
-
-                    Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so
-                    blinded by desire, that.</p>
+                    </br>
+                    </br>
+                    Ddislike men who are so beguiled and demoralized by the charms of pleasure
+                    of
+                    the moment, so blinded by desire, that. </p>
                 <a class="btn btn-primary" href="#">Explore Places</a>
             </div>
-            <div class="col-6">
+            <div class="col-4">
                 <div class="block-why__images">
-                    <img class="block-why__image" src="./images/house-near-river.svg" alt="House Near River">
-                    <img class="block-why__image" src="./images/mountains.svg" alt="Mountains">
+                    <img class="block-why__image-one" src="./images/house-near-river.svg" alt="House Near River">
+                    <img class="block-why__image-two" src="./images/mountains.svg" alt="Mountains">
                 </div>
             </div>
         </div>
