--- a/students/umienchuk_oksana/exams_first/src/header/_header.html
+++ b/students/umienchuk_oksana/exams_first/src/header/_header.html
@@ -5,16 +5,46 @@
                 <h1 class="main-title">Bhromaon</h1>
                 <p class="title-sub-text">Safe Travel Anywhere</p>
                 @@include("../form-search/_form-search.html")
+                <div class="main-wrap">
+                    <a class="main__link" href="#menu-anchor">
+                        <p class="scroll-down">Scroll Down</p>
+                        <svg class="main__icon-img icon-white">
+                            <use xlink:href="#chevron-down" />
+                        </svg>
+                    </a>
+                </div>
             </div>
         </div>
-        <nav class="menu header__menu">
-            <h3 class="logo menu__logo">Bhromaon</h3>
-            <ul class="menu__items">
-                <li class="menu__item">Who We Are</li>
-                <li class="menu__item">What We Do</li>
-                <li class="menu__item">Travel With Us</li>
-                <li class="menu__item">Contact Us</li>
-            </ul>
-        </nav>
     </div>
+    <nav class="menu header__menu" id="menu-anchor">
+        <div class="container">
+            <div class="row flex">
+                <h3 class="logo menu__logo">
+                    <a class="menu__logo-link" href="#">Bhromaon</a>
+                </h3>
+                <ul class="menu__items">
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">
+                            What We Do
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">
+                            Travel With Us
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">
+                            Contact Us
+                        </a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="#">
+                            Who We Are
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </header>
