update img links

--- a/students/tiselko_iryna/exam_module1/src/index.html
+++ b/students/tiselko_iryna/exam_module1/src/index.html
@@ -83,9 +83,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-12 chooseus__img-wrapper">
-                        <img class="chooseus__img chooseus__img-left" src="./images/chooseus/1st_img.png" alt="House">
-                        <img class="chooseus__img chooseus__img-right" src="./images/chooseus/2nd_img.png"
-                            alt="Mountaine">
+                        <img class="chooseus__img chooseus__img-left" src="images/GrandSpain_1.png" alt="House">
+                        <img class="chooseus__img chooseus__img-right" src="images/GrandSpain_2.png" alt="Mountaine">
                     </div>
                 </div>
             </div>
@@ -154,7 +153,7 @@
                     <div class="col-12">
                         <h2 class="touristssay__title">What Our Tourists Say</h2>
                         <div class="touristssay__item">
-                            <img src="./images/touristssay/touristssay_1st_img.png" alt="tourists say"
+                            <img src="images/TouristsSay/TouristsSay_1st_img.png" alt="tourists say"
                                 class="touristssay__img">
                             <div class="touristssay__wrapper">
                                 <h4 class="touristssay__subtitle">Sam Sumon</h4>
