--- a/students/tiselko_iryna/exam_module1/src/index.html
+++ b/students/tiselko_iryna/exam_module1/src/index.html
@@ -83,8 +83,9 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-12 chooseus__img-wrapper">
-                        <img class="chooseus__img chooseus__img-left" src="images/GrandSpain_1.png" alt="House">
-                        <img class="chooseus__img chooseus__img-right" src="images/GrandSpain_2.png" alt="Mountaine">
+                        <img class="chooseus__img chooseus__img-left" src="images/ChooseUs/1st_img.png" alt="House">
+                        <img class="chooseus__img chooseus__img-right" src="images/ChooseUs/2nd_img.png"
+                            alt="Mountaine">
                     </div>
                 </div>
             </div>
