--- a/students/umienchuk_oksana/exams_first/src/header/_header.html
+++ b/students/umienchuk_oksana/exams_first/src/header/_header.html
@@ -1,24 +1,21 @@
 <header class="header">
     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h1 class="main-title">Bhromaon</h1>
-                <p class="title-sub-text">Safe Travel Anywhere</p>
-                @@include("../form-search/_form-search.html")
-                <div class="main-wrap">
-                    <a class="main__link" href="#menu-anchor">
-                        <p class="scroll-down">Scroll Down</p>
-                        <svg class="main__icon-img icon-white">
-                            <use xlink:href="#chevron-down" />
-                        </svg>
-                    </a>
-                </div>
-            </div>
+        <h1 class="main-title">Bhromaon</h1>
+        <p class="title-sub-text">Safe Travel Anywhere</p>
+        @@include("../form-search/_form-search.html")
+        <div class="main-wrap">
+            <a class="main__link" href="#menu-anchor">
+                <p class="scroll-down">Scroll Down</p>
+                <svg class="main__icon-img icon-white">
+                    <use xlink:href="#chevron-down" />
+                </svg>
+            </a>
         </div>
+
     </div>
     <nav class="menu header__menu" id="menu-anchor">
         <div class="container">
-            <div class="row flex">
+            <div class="flex">
                 <h3 class="logo menu__logo">
                     <a class="menu__logo-link" href="#">Bhromaon</a>
                 </h3>
